FileUtility: route Path-from-String through NonNullWrapperCommon
calculateFilePath(String) was calling Path.of directly with a local
@SuppressWarnings("null"). Convention is to centralize such suppressions
in NonNullWrapperCommon. Delegates to NonNullWrapperCommon.get(String),
which already exists for this exact purpose.

Also modernized NonNullWrapperCommon.get(String) from Paths.get to
Path.of (documented as equivalent; Path.of is the post-Java-11 idiom).
Drops the now-unused Paths import.